--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PINECONE_API_KEY = 7a1a15d8-195f-45d0-b37a-c57096fe2e05
-OPENAI_API_KEY = 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
+PINECONE_API_KEY = 
+OPENAI_API_KEY = 
